styles.css
/* CSS reset courtesy of Josh W Comeau at https://www.joshwcomeau.com/css/custom-css-reset/ */
/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
* {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
	interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input, button, textarea, select {
  font: inherit;
}

/* 8. Avoid text overflows */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

/* Original CSS */

body {
	height: 100vh;
    display: grid;
    grid-template: 10rem 1fr / 18.75rem 1fr;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

.sidebar {
    display: grid;
    grid-template-rows: 5rem 20rem 20rem;
    gap: 3rem;
    grid-row: 1 / 3;
    background-color: #6aa2fc;
}

.logo {
    display: grid;
    grid-template-columns: 1fr 4fr;
    align-items: center;
    padding: 1rem;
}

.logo h1 {
	margin-left: 1rem;
}

.header {
    display: grid;
    grid-template-rows: 1fr 1fr;
	box-shadow: 0 5px 10px -5px grey;
	padding: 1rem;
	gap: 1rem;
}

.header-top {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-row: 1;
    align-items: center;
}

.search-area {
    display: grid;
    grid-template-columns: 5rem 5fr;
    justify-items: left;
	align-items: center;
	margin-left: 4rem;
}

.user-area {
    display: grid;
    grid-template-columns: 5rem 5rem 10rem;
    justify-content: flex-end;
    align-items: center;
	margin-left: 2rem;
}

.header-bottom {
	display: grid;
	grid-template-columns: 100px 2fr 2fr;
	margin-left: 4rem;
	align-items: center;
}

.buttons {
	justify-self: end;
	margin-right: 2rem;
}

.content {
	display: grid;
	grid-template: 1fr 1fr / 1fr 25rem;
	padding: 1rem;
	padding-bottom: 4rem;
	background-color: #bacbe6;
}

.main-content {
	grid-column: 1;
	grid-row: 1 / 3;
	display: grid;
	grid-template-rows: 5rem 1fr;
}

.announcements,
.trending {
	display: grid;
	grid-template-rows: 5rem 1fr;
	background-color: blueviolet;
}

.announcement,
.trends {
	display: grid;
	grid-template-rows: repeat(auto-fit, 1fr);
}

.cards {
	display: grid;
  	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	gap: 1rem;
}

.card {
	height: 250px;
	display: grid;
	grid-template-rows: 1fr 4fr 1fr;
	padding: 1rem;
	background-color: grey;
}

.card-icons {
	display: grid;
	grid-template-columns: 50px 50px 50px;
	justify-content: end;
	gap: 1rem;
}

.placeholder-img {
    height: 50px;
    width: 50px;
    background-color: greenyellow;
}

.sidebar > ul {
    display: grid;
    grid-template: 50px / 1fr 4fr;
	grid-auto-rows: 50px;
	grid-auto-columns: 1fr 4fr;
    list-style-type: none;
	align-items: center;
	row-gap: 0.5rem;
}

.sidebar > ul > li {
	margin-left: 1rem;
}

input[type="search"] {
    width: clamp(20rem, 100%, 38rem);
	height: 36px;
	border-color: transparent;
	background-color: #b3b3b3;
	border-radius: 36px;
}

